syntax = "proto3";
package lavanet.lava.spec;

import "gogoproto/gogo.proto";

option go_package = "github.com/lavanet/lava/x/spec/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  int32 geolocationCount  = 1 [(gogoproto.moretags) = "yaml:\"geolocation_count\""];
  uint64 maxCU = 2 [(gogoproto.moretags) = "yaml:\"max_compute_units\""];
}